Some changes in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>This is learning Git</title>
 </head>
 <body>
-    this is in Development Branch
+    this is in Master Branch
 </body>
 </html>
